# python-sqlite-tasks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry-build.yml
demo/: main_consumer.py  main_producer.py
tasks/: console.py  framework.py  sqlite.py
tests/: test_framework.py  test_sqlite.py
